--- a/Hgtrg.Ecommerce/Hgtrg.Ecommerce.Client/Views/Home/Index.cshtml
+++ b/Hgtrg.Ecommerce/Hgtrg.Ecommerce.Client/Views/Home/Index.cshtml
@@ -1,159 +1,140 @@
-﻿<!-- Slider -->
+﻿@model Hgtrg.Ecommerce.DataLayer.Models.Product
+@*@model IEnumerable<Hgtrg.Ecommerce.DataLayer.Models.Product>*@
+<!-- Slider -->
 <section class="section-slide">
-	<div class="wrap-slick1">
+	<div class="wrap-slick1 rs1-slick1">
 		<div class="slick1">
-			<div class="item-slick1" style="background-image: url(images/slide-01.jpg);">
-				<div class="container h-full">
-					<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
-						<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
-							<span class="ltext-101 cl2 respon2">
-								Women Collection 2018
-							</span>
-						</div>
+			@*@foreach (var slider in Model)
+			{
+				<div class="item-slick1" style="background-image: url(@slider.ProductImages.First().Url)">
+					<div class="container h-full">
+						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
+							<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
+								<span class="ltext-101 cl2 respon2">
+									@slider.Description
+								</span>
+							</div>
 
-						<div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
-							<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-								NEW SEASON
-							</h2>
-						</div>
+							<div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
+								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
+									NEW ARRIVAL
+								</h2>
+							</div>
 
-						<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
-							<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-								Shop Now
-							</a>
+							<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
+								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+									Shop Now
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			}*@
+			@foreach (var item in Model.ProductImages)
+			{
+				<div class="item-slick1" style="background-image: url(@item.Url)">
+					<div class="container h-full">
+						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
+							<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
+								<span class="ltext-101 cl2 respon2">
+									@Model.Description
+								</span>
+							</div>
 
-			<div class="item-slick1" style="background-image: url(images/slide-02.jpg);">
-				<div class="container h-full">
-					<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
-						<div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
-							<span class="ltext-101 cl2 respon2">
-								Men New-Season
-							</span>
-						</div>
+							<div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
+								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
+									NEW ARRIVAL
+								</h2>
+							</div>
 
-						<div class="layer-slick1 animated visible-false" data-appear="lightSpeedIn" data-delay="800">
-							<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-								Jackets & Coats
-							</h2>
-						</div>
-
-						<div class="layer-slick1 animated visible-false" data-appear="slideInUp" data-delay="1600">
-							<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-								Shop Now
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="item-slick1" style="background-image: url(images/slide-03.jpg);">
-				<div class="container h-full">
-					<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
-						<div class="layer-slick1 animated visible-false" data-appear="rotateInDownLeft" data-delay="0">
-							<span class="ltext-101 cl2 respon2">
-								Men Collection 2018
-							</span>
-						</div>
-
-						<div class="layer-slick1 animated visible-false" data-appear="rotateInUpRight" data-delay="800">
-							<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-								New arrivals
-							</h2>
-						</div>
-
-						<div class="layer-slick1 animated visible-false" data-appear="rotateIn" data-delay="1600">
-							<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-								Shop Now
-							</a>
+							<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
+								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+									Shop Now
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			}
 		</div>
 	</div>
 </section>
 
 <!-- Banner -->
-<div class="sec-banner bg0 p-t-80 p-b-50">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
-				<!-- Block1 -->
-				<div class="block1 wrap-pic-w">
-					<img src="images/banner-01.jpg" alt="IMG-BANNER">
+<div class="sec-banner bg0">
+	<div class="flex-w flex-c-m">
+		<div class="size-202 m-lr-auto respon4">
+			<!-- Block1 -->
+			<div class="block1 wrap-pic-w">
+				<img src="images/banner-04.jpg" alt="IMG-BANNER">
 
-					<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
-						<div class="block1-txt-child1 flex-col-l">
-							<span class="block1-name ltext-102 trans-04 p-b-8">
-								Women
-							</span>
+				<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+					<div class="block1-txt-child1 flex-col-l">
+						<span class="block1-name ltext-102 trans-04 p-b-8">
+							Women
+						</span>
 
-							<span class="block1-info stext-102 trans-04">
-								Spring 2018
-							</span>
+						<span class="block1-info stext-102 trans-04">
+							Spring 2018
+						</span>
+					</div>
+
+					<div class="block1-txt-child2 p-b-4 trans-05">
+						<div class="block1-link stext-101 cl0 trans-09">
+							Shop Now
 						</div>
-
-						<div class="block1-txt-child2 p-b-4 trans-05">
-							<div class="block1-link stext-101 cl0 trans-09">
-								Shop Now
-							</div>
-						</div>
-					</a>
-				</div>
+					</div>
+				</a>
 			</div>
+		</div>
 
-			<div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
-				<!-- Block1 -->
-				<div class="block1 wrap-pic-w">
-					<img src="images/banner-02.jpg" alt="IMG-BANNER">
+		<div class="size-202 m-lr-auto respon4">
+			<!-- Block1 -->
+			<div class="block1 wrap-pic-w">
+				<img src="images/banner-05.jpg" alt="IMG-BANNER">
 
-					<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
-						<div class="block1-txt-child1 flex-col-l">
-							<span class="block1-name ltext-102 trans-04 p-b-8">
-								Men
-							</span>
+				<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+					<div class="block1-txt-child1 flex-col-l">
+						<span class="block1-name ltext-102 trans-04 p-b-8">
+							Men
+						</span>
 
-							<span class="block1-info stext-102 trans-04">
-								Spring 2018
-							</span>
+						<span class="block1-info stext-102 trans-04">
+							Spring 2018
+						</span>
+					</div>
+
+					<div class="block1-txt-child2 p-b-4 trans-05">
+						<div class="block1-link stext-101 cl0 trans-09">
+							Shop Now
 						</div>
-
-						<div class="block1-txt-child2 p-b-4 trans-05">
-							<div class="block1-link stext-101 cl0 trans-09">
-								Shop Now
-							</div>
-						</div>
-					</a>
-				</div>
+					</div>
+				</a>
 			</div>
+		</div>
 
-			<div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
-				<!-- Block1 -->
-				<div class="block1 wrap-pic-w">
-					<img src="images/banner-03.jpg" alt="IMG-BANNER">
+		<div class="size-202 m-lr-auto respon4">
+			<!-- Block1 -->
+			<div class="block1 wrap-pic-w">
+				<img src="images/banner-06.jpg" alt="IMG-BANNER">
 
-					<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
-						<div class="block1-txt-child1 flex-col-l">
-							<span class="block1-name ltext-102 trans-04 p-b-8">
-								Accessories
-							</span>
+				<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+					<div class="block1-txt-child1 flex-col-l">
+						<span class="block1-name ltext-102 trans-04 p-b-8">
+							Bags
+						</span>
 
-							<span class="block1-info stext-102 trans-04">
-								New Trend
-							</span>
+						<span class="block1-info stext-102 trans-04">
+							New Trend
+						</span>
+					</div>
+
+					<div class="block1-txt-child2 p-b-4 trans-05">
+						<div class="block1-link stext-101 cl0 trans-09">
+							Shop Now
 						</div>
-
-						<div class="block1-txt-child2 p-b-4 trans-05">
-							<div class="block1-link stext-101 cl0 trans-09">
-								Shop Now
-							</div>
-						</div>
-					</a>
-				</div>
+					</div>
+				</a>
 			</div>
 		</div>
 	</div>
